# bluks

./: .clang-format  .gitignore  CMakeLists.txt  conanfile.py  conanfile.txt
.cache/clangd/index/: app.h.715E183BBAEDAFDB.idx  main.cc.BD66AD4F96940632.idx
src/c++/: main.cc
src/c++/application/: application.cc  application.h
src/c++/application/graphics/glad/: glad.cc  glad.h
src/c++/application/graphics/shaders/shader_manager/: shader_manager.cc  shader_manager.h
src/c++/application/graphics/shaders/shader_program/: shader_program.cc  shader_program.h
src/c++/application/graphics/text/: font.cc  font.h  text_render.cc  text_render.h
src/c++/application/input/: input_handler.cc  input_handler.h
src/c++/application/input_handler/: input_handler.cc  input_handler.h
src/c++/game_base/: block.h  map.h
src/c++/game_base/bluks_game/: bluks_game.cc  bluks_game.h
src/c++/game_base/map/: map.cc  map.h
src/c++/game_base/shapes/: block.h  shape.cc  shape.h  shape_factory.cc  shape_factory.h
src/c++/graphics/: app.cc  app.h  graphics_handler.cc  graphics_handler.h
src/c++/graphics/glad/: glad.cc  glad.h
src/c++/utils/: color.cc  color.h  types.h
src/shaders/default/: default.frag.glsl  default.vert.glsl
